split to 3 notebooks

--- a/deep/Suicidal-Prediction-From-Scratch.ipynb
+++ b/deep/Suicidal-Prediction-From-Scratch.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Suicidal Prediction From Scratch\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -28,6 +35,15 @@
         "from torch.nn.utils.rnn import pad_sequence\n",
         "import os\n",
         "import matplotlib.pyplot as plt"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Model CLasses \n",
+        "####  \n",
+        "---\n"
       ]
     },
     {
@@ -155,235 +171,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {
-        "id": "n2M31yb62Msu"
-      },
-      "outputs": [],
-      "source": [
-        "def preprocess_text(txt:str):\n",
-        "    \"\"\"\n",
-        "    Preprocesses the input text by removing non-alphabetic characters, converting to lowercase,\n",
-        "    removing stopwords and punctuation, and lemmatizing the remaining tokens.\n",
-        "\n",
-        "    Args:\n",
-        "        txt (str): The input text to be preprocessed.\n",
-        "\n",
-        "    Returns:\n",
-        "        str: The preprocessed text.\n",
-        "    \"\"\"\n",
-        "\n",
-        "    txt = re.sub('[^a-zA-Z]', ' ', txt)\n",
-        "    txt = txt.lower()\n",
-        "    txt = \" \".join(txt.split())\n",
-        "\n",
-        "    doc = nlp(txt)\n",
-        "\n",
-        "    tokens_filtered = []\n",
-        "\n",
-        "    for token in doc:\n",
-        "        if token.is_stop or token.is_punct:\n",
-        "            continue\n",
-        "\n",
-        "        tokens_filtered.append(token.lemma_)\n",
-        "\n",
-        "    return \" \".join(tokens_filtered)\n",
-        "def preprocess_labels(data):\n",
-        "    \"\"\"\n",
-        "    Preprocesses the labels in the given data.\n",
-        "\n",
-        "    Args:\n",
-        "        data (pandas.DataFrame): The input data containing the 'label' column.\n",
-        "\n",
-        "    Returns:\n",
-        "        pandas.DataFrame: The input data with an additional 'label_prep' column, where the labels are mapped to unique IDs.\n",
-        "    \"\"\"\n",
-        "    LABELS = data['label'].unique()\n",
-        "    label2id = dict(zip(LABELS, np.arange(len(LABELS), dtype=np.float32)))\n",
-        "    data['label_prep'] = data['label'].map(label2id)\n",
-        "    return data\n",
-        "\n",
-        "def tokenize_and_convert(text):\n",
-        "    # Tokenize the text using spaCy\n",
-        "    spaCy_tokens = [token.text for token in nlp(text)]\n",
-        "    \n",
-        "    # Convert spaCy tokens to strings\n",
-        "    token_strings = [str(token) for token in spaCy_tokens]\n",
-        "    \n",
-        "    # Map token strings to numerical IDs using the pre-trained tokenizer\n",
-        "    token_ids = tokenizer.convert_tokens_to_ids(token_strings)\n",
-        "    \n",
-        "    return token_ids\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "678aczQf2PIB",
-        "outputId": "9ed79bc5-8652-42ec-8789-6c9dd9bff2e0"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "                                                text         label\n",
-            "0  I recently went through a breakup and she said...    depression\n",
-            "1  I do not know how to navigate these feelings, ...    depression\n",
-            "2  So I have been with my bf for 5 months , and h...    depression\n",
-            "3  I am so exhausted of this. Just when I think I...  SuicideWatch\n",
-            "4  I have been severly bullied since i was 5 till...    depression\n",
-            "\n",
-            "df_null_values\n"
-          ]
-        },
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>count</th>\n",
-              "      <th>%</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>text</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>label</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "       count    %\n",
-              "text       0  0.0\n",
-              "label      0  0.0"
-            ]
-          },
-          "execution_count": 7,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "# Load the CSV file\n",
-        "data = pd.read_csv('mental-health.csv')\n",
-        "# Display the first few rows of the DataFrame\n",
-        "print(data.head())\n",
-        "data = data.drop_duplicates(ignore_index = True)\n",
-        "df_null_values = data.isnull().sum().to_frame().rename(columns = {0:'count'})\n",
-        "df_null_values['%'] = (df_null_values['count'] / len(data)) * 100\n",
-        "print(\"\")\n",
-        "print(\"df_null_values\")\n",
-        "df_null_values\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {
-        "id": "3QsbkKPE2hSx"
-      },
-      "outputs": [],
-      "source": [
-        "# apply the preprocess_text function to the 'text' column\n",
-        "data['text_prep'] = data['text'].apply(preprocess_text)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "#apply the tokenize_and_convert function to the 'text_prep' column\n",
-        "data['token_id'] =  data['text_prep'].apply(tokenize_and_convert)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {
-        "id": "Xwa4RZI52qw-"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "                                                text         label  \\\n",
-            "0  I recently went through a breakup and she said...    depression   \n",
-            "1  I do not know how to navigate these feelings, ...    depression   \n",
-            "2  So I have been with my bf for 5 months , and h...    depression   \n",
-            "3  I am so exhausted of this. Just when I think I...  SuicideWatch   \n",
-            "4  I have been severly bullied since i was 5 till...    depression   \n",
-            "\n",
-            "                                           text_prep  label_prep  \n",
-            "0  recently go breakup say want friend say try ta...         0.0  \n",
-            "1  know navigate feeling new feeling stretch unde...         0.0  \n",
-            "2  bf month tell depressed week particular happen...         0.0  \n",
-            "3  exhausted think finally rest think maybe thing...         1.0  \n",
-            "4  severly bully till result depressed misanthrop...         0.0  \n"
-          ]
-        }
-      ],
-      "source": [
-        "preprocessed_data = preprocess_labels(data)\n",
-        "print(preprocessed_data.head())\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Drop rows with null values in the 'text_prep' column.\n",
-        "data.dropna(subset=['text_prep'], inplace=True)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "data.to_csv('preprocessed_data.csv', index=False)"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "#####\n",
         "After preprocessed data once, load the saved data from csv file:"
       ]
     },
@@ -402,6 +193,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "### Delete rows with NaN values in the 'token_id' column\n",
+        "\n",
         "# data[data['token_id'].isna()]['token_id'].head()\n",
         "# data['token_id'] = data['token_id'].fillna('[]')"
       ]
@@ -536,10 +329,9 @@
       },
       "outputs": [],
       "source": [
+        "# Split the data into training, validation, and test sets\n",
         "X = data['token_id']\n",
         "y = data['label_prep']\n",
-        "\n",
-        "\n",
         "SEED = 1235\n",
         "train_ids_0, test_ids, train_labels_0, test_labels = tts(X, y, test_size = 0.1, random_state = SEED)\n",
         "train_ids, val_ids, train_labels, val_labels = tts(train_ids_0, train_labels_0, test_size = 0.2, random_state = SEED)"
@@ -655,7 +447,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# model = TransformerModel(ntoken, embedding_size, num_attention_heads, nhidden, nlayers, Dropout, norm_first=True).to(device)\n",
         "model = TransformerTextClassifier( ntoken, embedding_size, num_attention_heads, nhidden, nlayers,2, Dropout, norm_first=True).to(device)\n",
         "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)"
       ]
@@ -772,18 +563,6 @@
         "            accuracy = total_correct / total_samples\n",
         "    print(f'total_correct {total_correct}, total_samples : {total_samples}, Val Acc: {100. * accuracy:.2f}%')\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import math\n",
-        "def accurary_est(y_pred, y_label):\n",
-        "  y_pred = [0 if torch.sigmoid(i) < 0.5 else 1 for i in torch.tensor(y_pred)]\n",
-        "  return sum([1 for res in range(len(y_pred)) if y_pred[res] == y_label[res]]) / len(y_pred)"
       ]
     },
     {
@@ -969,6 +748,15 @@
         "        total_samples += labels.size(0)\n",
         "        accuracy = total_correct / total_samples\n",
         "print(f'total_correct {total_correct}, total_samples : {total_samples}, test Acc: {100. * accuracy:.2f}%')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Memory and Cache Clean \n",
+        "####  \n",
+        "---\n"
       ]
     },
     {
