--- a/deep/deep_learning_project_2.ipynb
+++ b/deep/deep_learning_project_2.ipynb
@@ -528,7 +528,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -539,7 +539,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 27,
       "metadata": {
         "id": "ZXxVUBzoxzZ5"
       },
@@ -548,11 +548,11 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/tmp/ipykernel_2732163/3275420073.py:17: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+            "/tmp/ipykernel_2747886/3275420073.py:17: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
             "  train_dataset = TensorDataset(torch.tensor(padded_train, dtype=torch.float), torch.tensor(train_labels, dtype=torch.float))\n",
-            "/tmp/ipykernel_2732163/3275420073.py:20: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+            "/tmp/ipykernel_2747886/3275420073.py:20: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
             "  val_dataset = TensorDataset(torch.tensor(padded_val, dtype=torch.float), torch.tensor(val_labels_array, dtype=torch.float))\n",
-            "/tmp/ipykernel_2732163/3275420073.py:23: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+            "/tmp/ipykernel_2747886/3275420073.py:23: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
             "  test_dataset =TensorDataset(torch.tensor(padded_test, dtype=torch.float), torch.tensor(test_labels_array, dtype=torch.float))\n"
           ]
         }
@@ -623,35 +623,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
         "num_attention_heads= 8\n",
-        "embedding_size= 160\n",
+        "embedding_size= 136\n",
         "nhidden= 70\n",
         "nlayers= 4\n",
         "dropout= 0.24840944810773966\n",
-        "learning_rate= 0.003\n",
+        "learning_rate= 0.005\n",
         "num_epochs= 3\n",
         "batch_size= 16\n",
-        "ntoken= 37585"
+        "ntoken= 37585\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 26,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/home/danielochana/anaconda3/envs/conda_deep/lib/python3.8/site-packages/torch/nn/modules/transformer.py:286: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.norm_first was True\n",
-            "  warnings.warn(f\"enable_nested_tensor is True, but self.use_nested_tensor is False because {why_not_sparsity_fast_path}\")\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "model = TransformerTextClassifier( ntoken, embedding_size, num_attention_heads, nhidden, nlayers,2, Dropout, norm_first=True).to(device)\n",
         "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)"
@@ -659,7 +650,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
@@ -668,7 +659,7 @@
               "<All keys matched successfully>"
             ]
           },
-          "execution_count": 43,
+          "execution_count": 30,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -683,11 +674,11 @@
         "# batch_size= 16\n",
         "# ntoken= 37585\n",
         "# learning_rate= 0.0002\n",
-        "# model = TransformerTextClassifier( ntoken, embedding_size, num_attention_heads, nhidden, nlayers,2, Dropout, norm_first=True).to(device)\n",
-        "# optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
+        "model = TransformerTextClassifier( ntoken, embedding_size, num_attention_heads, nhidden, nlayers,2, Dropout, norm_first=True).to(device)\n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
         "\n",
-        "# checkpoint = torch.load(\"model_checkpoint3.pth\")\n",
-        "# model.load_state_dict(checkpoint)"
+        "checkpoint = torch.load(\"model_checkpoint4.pth\")\n",
+        "model.load_state_dict(checkpoint)"
       ]
     },
     {
@@ -899,14 +890,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "total_correct 2600, total_samples : 3663, Val Acc: 70.98%\n"
+            "total_correct 2427, total_samples : 3663, Val Acc: 66.26%\n"
           ]
         }
       ],
@@ -932,14 +923,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "total_correct 1433, total_samples : 2035, test Acc: 70.42%\n"
+            "total_correct 1319, total_samples : 2035, test Acc: 64.82%\n"
           ]
         }
       ],
