--- a/From Scratch/code/Data-Pre-Process.ipynb
+++ b/From Scratch/code/Data-Pre-Process.ipynb
@@ -210,7 +210,7 @@
       ],
       "source": [
         "# Load the CSV file\n",
-        "data = pd.read_csv('mental-health.csv')\n",
+        "data = pd.read_csv('../data/mental-health.csv')\n",
         "# Display the first few rows of the DataFrame\n",
         "print(data.head())\n",
         "data = data.drop_duplicates(ignore_index = True)\n",
@@ -301,7 +301,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "data.to_csv('preprocessed_data.csv', index=False)"
+        "data.to_csv('../data/preprocessed_data.csv', index=False)"
       ]
     },
     {
