--- a/From Scratch/code/From-Scratch-Model-Evaluate.ipynb
+++ b/From Scratch/code/From-Scratch-Model-Evaluate.ipynb
@@ -185,7 +185,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "data = pd.read_csv('preprocessed_data.csv')"
+        "data = pd.read_csv('../data/preprocessed_data.csv')"
       ]
     },
     {
@@ -255,7 +255,7 @@
         "model = TransformerTextClassifier( ntoken, embedding_size, num_attention_heads, nhidden, nlayers,2, Dropout, norm_first=True).to(device)\n",
         "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
         "\n",
-        "checkpoint = torch.load(\"model_checkpoint10.pth\")\n",
+        "checkpoint = torch.load(\"../models/model_checkpoint10.pth\")\n",
         "model.load_state_dict(checkpoint)"
       ]
     },
