--- a/From Scratch/code/Suicidal-Prediction-From-Scratch.ipynb
+++ b/From Scratch/code/Suicidal-Prediction-From-Scratch.ipynb
@@ -180,11 +180,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
-        "data = pd.read_csv('preprocessed_data.csv')"
+        "data = pd.read_csv('../data/preprocessed_data.csv')"
       ]
     },
     {
@@ -201,7 +201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -213,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -312,7 +312,7 @@
               "4  [100, 20716, 6229, 2765, 14777, 100, 100, 3674...         0.0  "
             ]
           },
-          "execution_count": 16,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -608,7 +608,7 @@
       "outputs": [],
       "source": [
         "# Save the model\n",
-        "torch.save(model.state_dict(), 'model_checkpoint10.pth')"
+        "torch.save(model.state_dict(), '../models/model_checkpoint10.pth')"
       ]
     },
     {
